# Sterling_binary

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/superpowers/plans/: 2026-07-10-trojan-horse-bootstrap.md  2026-07-10-wifi-hardening-timestamp-softap-range.md
factory/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
factory/main/: CMakeLists.txt  app_main.c  config.h  network.c  network.h  softap.c  softap.h
main/: CMakeLists.txt  app_main.c  binary_protocol.c  binary_protocol.h  bulk.c  bulk.h  bulk_upload.c  bulk_upload.h  command_handler.c  command_handler.h  config.h  console.c  console.h  device.c  device.h  diagnostics.c  diagnostics.h  event_log.c  event_log.h  health.c  health.h  heartbeat.c  heartbeat.h  hmac_utils.c  hmac_utils.h  idf_component.yml  led.c  led.h  led_controller.c  led_controller.h  mqtt.c  mqtt.h  mqtt_manager.c  mqtt_manager.h  network.c  network.h  nvs_config.c  nvs_config.h  ota.c  ota.h  (+28 more)
