idf_component_register(
    SRCS
        "app_main.c"
        "device.c"
        "rfid.c"
        "network.c"
        "provision.c"
        "storage.c"
        "ota.c"
        "led.c"
        "event_log.c"
        "wireguard.c"
        "mqtt.c"
        "heartbeat.c"
        "telemetry.c"
        "command_handler.c"
        "tap_dispatcher.c"
        "bulk.c"
        "console.c"

    INCLUDE_DIRS
        "."

    REQUIRES
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_client
        esp_https_ota
        app_update
        bootloader_support
        esp_partition
        esp_timer
        driver
        spi_flash
        mbedtls
        efuse
        json
        littlefs
        rc522
        esp_wireguard
        mqtt
        console
)
