idf_component_register(
    SRCS
        "app_main.c"
        "rfid.c"
        "network.c"
        "storage.c"
        "ota.c"
        "led.c"
        "event_log.c"
        "provision.c"
        "softap.c"

    INCLUDE_DIRS
        "."

    REQUIRES
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_client
        esp_http_server
        esp_https_ota
        app_update
        bootloader_support
        esp_partition
        esp_timer
        driver
        spi_flash
        mbedtls
        efuse
        json
        littlefs
        rc522
)
